finalized from local repo, colab training being done

--- a/beat-zart.ipynb
+++ b/beat-zart.ipynb
@@ -2,9 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n",
+      "In D:\\Software\\AnacondaEnvelopeFolder\\lib\\site-packages\\matplotlib\\mpl-data\\stylelib\\seaborn-pastel.mplstyle: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "In D:\\Software\\AnacondaEnvelopeFolder\\lib\\site-packages\\matplotlib\\mpl-data\\stylelib\\seaborn-pastel.mplstyle: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "In D:\\Software\\AnacondaEnvelopeFolder\\lib\\site-packages\\matplotlib\\mpl-data\\stylelib\\seaborn-pastel.mplstyle: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "In D:\\Software\\AnacondaEnvelopeFolder\\lib\\site-packages\\matplotlib\\mpl-data\\stylelib\\seaborn-pastel.mplstyle: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "In D:\\Software\\AnacondaEnvelopeFolder\\lib\\site-packages\\matplotlib\\mpl-data\\stylelib\\seaborn-pastel.mplstyle: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "In D:\\Software\\AnacondaEnvelopeFolder\\lib\\site-packages\\matplotlib\\mpl-data\\stylelib\\seaborn-pastel.mplstyle: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "D:\\Software\\AnacondaEnvelopeFolder\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:541: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
+      "D:\\Software\\AnacondaEnvelopeFolder\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:542: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
+      "D:\\Software\\AnacondaEnvelopeFolder\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:543: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
+      "D:\\Software\\AnacondaEnvelopeFolder\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:544: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
+      "D:\\Software\\AnacondaEnvelopeFolder\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:545: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
+      "D:\\Software\\AnacondaEnvelopeFolder\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:550: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n"
+     ]
+    }
+   ],
    "source": [
     "import pickle\n",
     "import glob\n",
@@ -17,8 +43,7 @@
     "from keras.layers import BatchNormalization as BatchNorm\n",
     "from keras.layers import Activation\n",
     "from keras.utils import np_utils\n",
-    "from keras.callbacks import ModelCheckpoint\n",
-    "import tensorflow as tf"
+    "from keras.callbacks import ModelCheckpoint"
    ]
   },
   {
@@ -30,14 +55,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#function to get data\n",
     "def get_notes():\n",
     "    notes = []\n",
-    "    for file in glob.glob(\"dataset_ff/*.mid\"):\n",
+    "    for file in glob.glob(\"dataset_bach/*.mid\"):\n",
     "        midi = converter.parse(file)\n",
     "        print(\"Parsing %s\" % file)\n",
     "        notes_to_parse = None\n",
@@ -60,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,12 +149,12 @@
     "    filepath = \"weights/weights-improvement-{epoch:02d}-{loss:.4f}-bigger.hdf5\"\n",
     "    checkpoint = ModelCheckpoint(filepath,monitor='loss',verbose=0,save_best_only=True,mode='min')\n",
     "    callbacks_list = [checkpoint]\n",
-    "    model.fit(network_input, network_output, epochs=1, batch_size=128, callbacks=callbacks_list)"
+    "    model.fit(network_input, network_output, epochs=200, batch_size=128, callbacks=callbacks_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,111 +168,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Parsing dataset_ff\\0fithos.mid\n",
-      "Parsing dataset_ff\\8.mid\n",
-      "Parsing dataset_ff\\ahead_on_our_way_piano.mid\n",
-      "Parsing dataset_ff\\AT.mid\n",
-      "Parsing dataset_ff\\balamb.mid\n",
-      "Parsing dataset_ff\\bcm.mid\n",
-      "Parsing dataset_ff\\BlueStone_LastDungeon.mid\n",
-      "Parsing dataset_ff\\braska.mid\n",
-      "Parsing dataset_ff\\caitsith.mid\n",
-      "Parsing dataset_ff\\Cids.mid\n",
-      "Parsing dataset_ff\\cosmo.mid\n",
-      "Parsing dataset_ff\\costadsol.mid\n",
-      "Parsing dataset_ff\\dayafter.mid\n",
-      "Parsing dataset_ff\\decisive.mid\n",
-      "Parsing dataset_ff\\dontbeafraid.mid\n",
-      "Parsing dataset_ff\\DOS.mid\n",
-      "Parsing dataset_ff\\electric_de_chocobo.mid\n",
-      "Parsing dataset_ff\\Eternal_Harvest.mid\n",
-      "Parsing dataset_ff\\EyesOnMePiano.mid\n",
-      "Parsing dataset_ff\\ff11_awakening_piano.mid\n",
-      "Parsing dataset_ff\\ff1battp.mid\n",
-      "Parsing dataset_ff\\FF3_Battle_(Piano).mid\n",
-      "Parsing dataset_ff\\FF3_Third_Phase_Final_(Piano).mid\n",
-      "Parsing dataset_ff\\ff4-airship.mid\n",
-      "Parsing dataset_ff\\Ff4-BattleLust.mid\n",
-      "Parsing dataset_ff\\ff4-fight1.mid\n",
-      "Parsing dataset_ff\\ff4-town.mid\n",
-      "Parsing dataset_ff\\FF4.mid\n",
-      "Parsing dataset_ff\\ff4pclov.mid\n",
-      "Parsing dataset_ff\\ff4_piano_collections-main_theme.mid\n",
-      "Parsing dataset_ff\\FF6epitaph_piano.mid\n",
-      "Parsing dataset_ff\\ff6shap.mid\n",
-      "Parsing dataset_ff\\Ff7-Cinco.mid\n",
-      "Parsing dataset_ff\\Ff7-Jenova_Absolute.mid\n",
-      "Parsing dataset_ff\\ff7-mainmidi.mid\n",
-      "Parsing dataset_ff\\Ff7-One_Winged.mid\n",
-      "Parsing dataset_ff\\ff7themep.mid\n",
-      "Parsing dataset_ff\\ff8-lfp.mid\n",
-      "Parsing dataset_ff\\FF8_Shuffle_or_boogie_pc.mid\n",
-      "Parsing dataset_ff\\FFIII_Edgar_And_Sabin_Piano.mid\n",
-      "Parsing dataset_ff\\FFIXQuMarshP.mid\n",
-      "Parsing dataset_ff\\FFIX_Piano.mid\n",
-      "Parsing dataset_ff\\FFVII_BATTLE.mid\n",
-      "Parsing dataset_ff\\FFX_-_Ending_Theme_(Piano_Version)_-_by_Angel_FF.mid\n",
-      "Parsing dataset_ff\\Fiend_Battle_(Piano).mid\n",
-      "Parsing dataset_ff\\Fierce_Battle_(Piano).mid\n",
-      "Parsing dataset_ff\\figaro.mid\n",
-      "Parsing dataset_ff\\Finalfantasy5gilgameshp.mid\n",
-      "Parsing dataset_ff\\Finalfantasy6fanfarecomplete.mid\n",
-      "Parsing dataset_ff\\Final_Fantasy_7_-_Judgement_Day_Piano.mid\n",
-      "Parsing dataset_ff\\Final_Fantasy_Matouyas_Cave_Piano.mid\n",
-      "Parsing dataset_ff\\fortresscondor.mid\n",
-      "Parsing dataset_ff\\Fyw_piano.mid\n",
-      "Parsing dataset_ff\\gerudo.mid\n",
-      "Parsing dataset_ff\\goldsaucer.mid\n",
-      "Parsing dataset_ff\\Gold_Silver_Rival_Battle.mid\n",
-      "Parsing dataset_ff\\great_war.mid\n",
-      "Parsing dataset_ff\\HighwindTakestotheSkies.mid\n",
-      "Parsing dataset_ff\\In_Zanarkand.mid\n",
-      "Parsing dataset_ff\\JENOVA.mid\n",
-      "Parsing dataset_ff\\Kingdom_Hearts_Dearly_Beloved.mid\n",
-      "Parsing dataset_ff\\Kingdom_Hearts_Traverse_Town.mid\n",
-      "Parsing dataset_ff\\Life_Stream.mid\n",
-      "Parsing dataset_ff\\lurk_in_dark.mid\n",
-      "Parsing dataset_ff\\mining.mid\n",
-      "Parsing dataset_ff\\Oppressed.mid\n",
-      "Parsing dataset_ff\\OTD5YA.mid\n",
-      "Parsing dataset_ff\\path_of_repentance.mid\n",
-      "Parsing dataset_ff\\pkelite4.mid\n",
-      "Parsing dataset_ff\\Rachel_Piano_tempofix.mid\n",
-      "Parsing dataset_ff\\redwings.mid\n",
-      "Parsing dataset_ff\\relmstheme-piano.mid\n",
-      "Parsing dataset_ff\\roseofmay-piano.mid\n",
-      "Parsing dataset_ff\\rufus.mid\n",
-      "Parsing dataset_ff\\Rydia_pc.mid\n",
-      "Parsing dataset_ff\\sandy.mid\n",
-      "Parsing dataset_ff\\sera_.mid\n",
-      "Parsing dataset_ff\\sobf.mid\n",
-      "Parsing dataset_ff\\Still_Alive-1.mid\n",
-      "Parsing dataset_ff\\Suteki_Da_Ne_(Piano_Version).mid\n",
-      "Parsing dataset_ff\\thenightmarebegins.mid\n",
-      "Parsing dataset_ff\\thoughts.mid\n",
-      "Parsing dataset_ff\\tifap.mid\n",
-      "Parsing dataset_ff\\tpirtsd-piano.mid\n",
-      "Parsing dataset_ff\\traitor.mid\n",
-      "Parsing dataset_ff\\ultimafro.mid\n",
-      "Parsing dataset_ff\\ultros.mid\n",
-      "Parsing dataset_ff\\VincentPiano.mid\n",
-      "Parsing dataset_ff\\ViviinAlexandria.mid\n",
-      "Parsing dataset_ff\\waltz_de_choco.mid\n",
-      "Parsing dataset_ff\\Zelda_Overworld.mid\n",
-      "Parsing dataset_ff\\z_aeristhemepiano.mid\n",
-      "Epoch 1/1\n",
-      "57077/57077 [==============================] - 749s 13ms/step - loss: 5.3526\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
    "source": [
+    "#tf.debugging.set_log_device_placement(True)\n",
     "train_network()"
    ]
   },
@@ -260,14 +187,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "#generate piano midi file\n",
     "def generate():\n",
     "    #load notes used to train model\n",
-    "    with open('data/notes', 'rb') as filepath:\n",
+    "    with open('notes/notes', 'rb') as filepath:\n",
     "        notes = pickle.load(filepath)\n",
     "    #get pitch names\n",
     "    pitchnames = sorted(set(item for item in notes))\n",
@@ -280,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,13 +251,13 @@
     "    model.add(Dense(n_vocab))\n",
     "    model.add(Activation('softmax'))\n",
     "    model.compile(loss='categorical_crossentropy', optimizer='rmsprop')\n",
-    "    model.load_weights('weights-improvement-02-4.6367-bigger.hdf5')\n",
+    "    model.load_weights('weights/weights-improvement-06-3.6934-bigger.hdf5')\n",
     "    return model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,70 +317,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From D:\\Software\\AnacondaEnvelopeFolder\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:422: The name tf.global_variables is deprecated. Please use tf.compat.v1.global_variables instead.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "generate()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Num GPUs Available:  1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "print(\"Num GPUs Available: \", len(tf.config.experimental.list_physical_devices('GPU')))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tensor(\"MatMul:0\", shape=(2, 2), dtype=float32)\n"
-     ]
-    }
-   ],
-   "source": [
-    "tf.debugging.set_log_device_placement(True)\n",
-    "\n",
-    "# Create some tensors\n",
-    "a = tf.constant([[1.0, 2.0, 3.0], [4.0, 5.0, 6.0]])\n",
-    "b = tf.constant([[1.0, 2.0], [3.0, 4.0], [5.0, 6.0]])\n",
-    "c = tf.matmul(a, b)\n",
-    "\n",
-    "print(c)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tf.debugging.set_log_device_placement(True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
